--- a/index.html
+++ b/index.html
@@ -147,8 +147,21 @@
                     </ul>
                 </aside>
                 <article class="main-content">
-                        <h1>gallery</h1>
-                    <div> </div>
+                    <div class="gallery">
+                      <h1>Gallery</h1>
+                      <ul>
+                        <li>
+                          <img src="./images/gallery/img1.jpg" alt="kitty">
+                          <img src="#" alt="kitty">
+                          <img src="#" alt="kitty">
+                          <img src="#" alt="kitty">
+                          <img src="#" alt="kitty">
+                          <img src="#" alt="kitty">
+                          <img src="#" alt="kitty">
+                          <img src="#" alt="kitty">
+                        </li>
+                      </ul>
+                    </div>
                     <div> </div>
                 </article>
             </section>
