--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
             .main-content {
                 float: right;
-                background-color: green;
+                background-color: #aaaaaa;
                 width: 71%;
                 height: 500px;
                 padding: 0 2% 0 2%;
@@ -115,13 +115,30 @@
                 background-color: #CCC;
                 color: #000;
             }
+            .gallery h1{
+              margin: 30px 0  15px 0;
+            }
+            .gallery ul{
+              list-style-type: none;
+              text-align: center;
+              margin-top: 20px;
+            }
+
+            .gallery li {
+              margin-right: 10px;
+              display: inline;
+            }
+            .gallery img {
+              width: 170px;
+              height: 100px;
+            }
         </style>
     </head>
 
     <body>
         <div class="wrapper">
             <header class="main-header box-shadow">
-                <h1>Lucas Phan</h1>
+                <h1>Ronnie Vang</h1>
             </header>
             <section class="content-top">
                 <article class="content-bio">
@@ -139,11 +156,11 @@
                 <aside class="sidebar">
                     <ul class="sidebar-links">
                         <li><a href="http://www.google.com" target="_blank">Google.com</a></li>
-                        <li><a href="#">Link</a></li>
-                        <li><a href="#">Link</a></li>
-                        <li><a href="#">Link</a></li>
-                        <li><a href="#">Link</a></li>
-                        <li><a href="#">Link</a></li>
+                        <li><a href="http://www.yahoo.com" target="_blank">Yahoo.com>Link</a></li>
+                        <li><a href="http://www.youtube.com" target="_blank">YouTube.com></a></li>
+                        <li><a href="http://www.github.com" target="_blank">github.com></a></li>
+                        <li><a href="http://www.bing.com" target="_blank">bing.com></a></li>
+                        <li><a href="http://www.fresnostate.edu" target="_blank">fresnostate.edu></a></li>
                     </ul>
                 </aside>
                 <article class="main-content">
@@ -151,14 +168,14 @@
                       <h1>Gallery</h1>
                       <ul>
                         <li>
-                          <img src="./images/gallery/img1.jpg" alt="kitty">
-                          <img src="#" alt="kitty">
-                          <img src="#" alt="kitty">
-                          <img src="#" alt="kitty">
-                          <img src="#" alt="kitty">
-                          <img src="#" alt="kitty">
-                          <img src="#" alt="kitty">
-                          <img src="#" alt="kitty">
+                          <img src="./images/gallery/img1.jpg" alt="kitty1">
+                          <img src="./images/gallery/img2.jpg" alt="kitty2">
+                          <img src="./images/gallery/img3.jpg" alt="kitty3">
+                          <img src="./images/gallery/img4.jpg" alt="kitty4">
+                          <img src="./images/gallery/img5.jpg" alt="kitty5">
+                          <img src="./images/gallery/img6.jpg" alt="kitty6">
+                          <img src="./images/gallery/img7.jpg" alt="kitty7">
+                          <img src="./images/gallery/img8.jpg" alt="kitty8">
                         </li>
                       </ul>
                     </div>
@@ -169,7 +186,7 @@
         </div>
         <footer class="footer box-shadow">
             <p class="copyright">
-                (c) Created by Lucas Phan
+                (c) Created by Ronnie Vang
             </p>
         </footer>
 
