--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                 <article class="main-content">
                     <div class="gallery">
                       <h1>Gallery</h1>
-                      <ul>
+                      <!--<ul
                         <li>
                           <img src="./images/gallery/img1.jpg" alt="kitty1">
                           <img src="./images/gallery/img2.jpg" alt="kitty2">
@@ -177,7 +177,27 @@
                           <img src="./images/gallery/img7.jpg" alt="kitty7">
                           <img src="./images/gallery/img8.jpg" alt="kitty8">
                         </li>
-                      </ul>
+                      </ul>-->
+                      <table>
+                        <tr>
+                          <th>kitty 1</th>
+                          <th>kitty 2</th>
+                          <th>kitty 3</th>
+                          <th>kitty 4</th>
+                        </tr>
+                        <tr>
+                          <td><img src="./images/gallery/img1.jpg" alt="kitty1"></td>
+                          <td><img src="./images/gallery/img2.jpg" alt="kitty1"></td>
+                          <td><img src="./images/gallery/img3.jpg" alt="kitty1"></td>
+                          <td><img src="./images/gallery/img4.jpg" alt="kitty1"></td>
+                        </tr>
+                        <tr>
+                          <td><img src="./images/gallery/img5.jpg" alt="kitty1"></td>
+                          <td><img src="./images/gallery/img6.jpg" alt="kitty1"></td>
+                          <td><img src="./images/gallery/img7.jpg" alt="kitty1"></td>
+                          <td><img src="./images/gallery/img8.jpg" alt="kitty1"></td>
+                        </tr>
+                      </table>
                     </div>
                     <div> </div>
                 </article>
