--- a/index.html
+++ b/index.html
@@ -19,25 +19,27 @@
             }
             .wrapper {
                 flex:1;
+                background-color: lightslategray;
             }
             .main-header {
-                background-color: #CCC;
+                background-color: #000;
                 height: 50px;
                 width: 70%;
                 padding: 5px 15%;
             }
             .main-header h1 {
                 line-height: 50px;
+                color: white;
             }
             .footer {
                 height: 50px;
-                background-color: #CCC;
+                background-color: #000;
             }
             span.logo {
                 color: blue;
             }
             .copyright {
-                color: blue;
+                color: white;
                 font-weight: bold;
                 width: 100%;
                 text-align: center;
@@ -50,9 +52,7 @@
                 -o-box-shadow: inset 0px 0px 50px 0px #ABABAB, 1px 1px 5px 1px #242424;
             }
             .content-top {
-                60%;
                 height: 180px;
-                background-color: #CCC;
                 margin: 10px 0;
             }
 
@@ -96,6 +96,10 @@
                 padding: 0 2% 0 2%;
             }
 
+            .sidebar-links h1{
+                text-align: center;
+                margin: 30px 0  15px 0;
+            }
             .sidebar-links {
                 background-color: #f1f1f1;
             }
@@ -146,8 +150,18 @@
                     <div class="bio-text">
                         <h1>My Biography</h1>
                         <p>
-                            Lorem ipsum dolor sit amet, pharetra venenatis erat nisl duis aliquet. Curabitur tellus imperdiet lacus, urna sed mollis pharetra eleifend doloribus, vehicula maecenas non fusce at sollicitudin erat, metus purus justo mauris tempus in. Tincidunt
-                            et feugiat enim dui lacus, dolor nulla dolor tempor leo maecenas consequat.
+                            Hello! My name is Ronnie. I am a full time student at Fresno State.
+                            I am a business major with the option of Informatin System. My goal after
+                            college is to get a career within my degree and then come back to get
+                            my Master degree.</p>
+                            <p> My hobby is sleep. I like to use my free time to sleep whenever I get a chance.
+                            Another thing that I like to do is eat. I like to go out and
+                            try different type of food. I basically like to go out and try
+                            food that interested me. One thing that I will want to do in the future
+                            is to traveling. I will like to travel to different places and try out a
+                            variety of food. I also enjoy watching movies in theaters. Some types of
+                             movie that I like to watch are fantasy, action, and comedy. One type of
+                             music that I like to listen to is EDM.
                         </p>
                     </div>
                 </article>
@@ -155,12 +169,13 @@
             <section class="content-bottom">
                 <aside class="sidebar">
                     <ul class="sidebar-links">
-                        <li><a href="http://www.google.com" target="_blank">Google.com</a></li>
-                        <li><a href="http://www.yahoo.com" target="_blank">Yahoo.com>Link</a></li>
-                        <li><a href="http://www.youtube.com" target="_blank">YouTube.com></a></li>
-                        <li><a href="http://www.github.com" target="_blank">github.com></a></li>
-                        <li><a href="http://www.bing.com" target="_blank">bing.com></a></li>
-                        <li><a href="http://www.fresnostate.edu" target="_blank">fresnostate.edu></a></li>
+                        <h1>Links</h1>
+                        <li><a href="http://www.google.com" target="_blank">Google</a></li>
+                        <li><a href="http://www.facebook.com" target="_blank">Facebook</a></li>
+                        <li><a href="http://www.youtube.com" target="_blank">YouTube</a></li>
+                        <li><a href="http://www.github.com" target="_blank">github</a></li>
+                        <li><a href="http://www.bing.com" target="_blank">bing</a></li>
+                        <li><a href="http://www.fresnostate.edu" target="_blank">fresnostate home</a></li>
                     </ul>
                 </aside>
                 <article class="main-content">
@@ -179,12 +194,6 @@
                         </li>
                       </ul>-->
                       <table>
-                        <tr>
-                          <th>kitty 1</th>
-                          <th>kitty 2</th>
-                          <th>kitty 3</th>
-                          <th>kitty 4</th>
-                        </tr>
                         <tr>
                           <td><img src="./images/gallery/img1.jpg" alt="kitty1"></td>
                           <td><img src="./images/gallery/img2.jpg" alt="kitty1"></td>
